--- a/deno.json
+++ b/deno.json
@@ -2,19 +2,24 @@
   "tasks": {
     "dev": "deno run -A --node-modules-dir=auto npm:vite",
     "build": "deno run -A --node-modules-dir=auto npm:vite build",
-    "server:start": "deno run -A --node-modules-dir --watch ./server/main.ts",
+    "server:start": "deno run -A --node-modules-dir --watch ./server/main.tsx",
     "serve": "deno task build && deno task server:start"
   },
   "imports": {
     "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.0",
     "@oak/oak": "jsr:@oak/oak@^17.1.3",
+    "@observablehq/framework": "npm:@observablehq/framework@^1.13.2",
+    "@observablehq/plot": "npm:@observablehq/plot@^0.6.17",
     "@std/assert": "jsr:@std/assert@1",
     "@types/react": "npm:@types/react@^18.3.12",
     "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.3",
+    "d3": "npm:d3@^7.9.0",
     "react": "npm:react@^18.3.1",
     "react-dom": "npm:react-dom@^18.3.1",
     "react-router-dom": "npm:react-router-dom@^6.28.0",
-    "vite": "npm:vite@^5.4.11"
+    "vite": "npm:vite@^5.4.11",
+    "zustand": "npm:zustand@^5.0.3",
+    "zustand-store-addons": "npm:zustand-store-addons@^0.1.12"
   },
   "compilerOptions": {
     "types": [
