On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	new file:   client/src/PersonStore.tsx
	new file:   client/src/StoreTest.tsx
	new file:   client/src/components/StaticApp.tsx
	modified:   client/src/main.tsx
	modified:   deno.json
	modified:   deno.lock
	modified:   server/StaticDocApp.jsx
	modified:   server/StaticRootApp.jsx
	modified:   server/hydrate-doc.js
	new file:   server/hydrate-root-server.tsx
	modified:   server/hydrate-root.js
	modified:   server/main.tsx
	new file:   server/root-server.tsx
	new file:   server/static/root/index.html
	new file:   www/docs/src/assets/index-BE1INyeR.js
	new file:   www/docs/src/index.html
	new file:   www/docs/src/react.svg
	new file:   www/docs/src/vite.svg

--- a/deno.json
+++ b/deno.json
@@ -14,6 +14,7 @@
     "@types/react": "npm:@types/react@^18.3.12",
     "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.3",
     "d3": "npm:d3@^7.9.0",
+    "hono": "npm:hono@^4.7.2",
     "react": "npm:react@^18.3.1",
     "react-dom": "npm:react-dom@^18.3.1",
     "react-router-dom": "npm:react-router-dom@^6.28.0",
