On branch main Your branch is ahead of 'origin/main' by 2 commits.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   client/index.html
	deleted:    client/src/components/server-0.js
	modified:   client/src/main.tsx
	deleted:    client/src/snips/Plot.geo.azimuthal-equidistant.js
	deleted:    client/src/snips/PlotFigure.js
	deleted:    client/src/snips/d3.geoCircle.center.md
	deleted:    client/src/snips/orthographic-radial-gradient.md
	deleted:    client/src/snips/plot.js
	modified:   client/src/stores/CandleStickChart.tsx
	new file:   client/src/stores/CandleStickStore.tsx
	deleted:    client/src/stores/CandlesStore.tsx
	modified:   client/src/stores/StoreTest.tsx
	new file:   client/src/stores/aapl.csv
	deleted:    client/src/stores/selectors.ts
	deleted:    client/src/stores/store.ts
	renamed:    client/src/styles.css -> client/src/styles/styles.css
	new file:   client/src/tests/D3Examlpe.tsx
	new file:   client/src/tests/D3NoRef.tsx
	new file:   client/src/tests/D3UseRef.tsx
	new file:   client/src/tests/ReadableStreamApp.tsx
	new file:   client/src/tests/StaticDoc.tsx
	new file:   client/src/tests/readable-stream-boot.js
	new file:   client/src/tests/readable-stream.ts
	modified:   deno.json
	modified:   deno.lock

--- a/deno.json
+++ b/deno.json
@@ -33,7 +33,8 @@
       "dom.iterable",
       "deno.ns"
     ],
-    "jsx": "react-jsx",
-    "jsxImportSource": "react"
+    "jsx": "react-jsxdev",
+    "jsxImportSource": "npm:react@^19.0",
+    "jsxImportSourceTypes": "npm:@types/react@^19.0"
   }
 }
